# Email

./: .gitignore  README.md  pyproject.toml
frontend/: .env.example  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.vue  main.ts  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  mail.ts
frontend/src/views/: DashboardPage.vue  LoginPage.vue  MailboxMessagesPage.vue  MailboxPage.vue  MessagesPage.vue  PublicDeliveryPage.vue  SettingsPage.vue
src/email_backend/: main.py
src/email_backend/app/: __init__.py  api.py  api_router.py
src/email_backend/config/: __init__.py  config.py  databases.py  security.py
src/email_backend/controller/: __init__.py
src/email_backend/core/: __init__.py  config.py  databases.py  security.py
src/email_backend/router/: __init__.py  login.py  mailbox.py  message.py  user.py
src/email_backend/schemes/: __init__.py  database.db  dto.py  entity.py
src/email_backend/services/: __init__.py  mailboxService.py  messageService.py  serviceBase.py  userService.py
src/email_backend/test/: client.py
src/email_backend/utils/: common.py
