[project]
name = "email"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.127.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.40.0",
]


#[[tool.uv.index]]
#url = "http://192.168.10.12:8081/repository/pypi/simple"
#default = true

